@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-09-17T01:15:46Z",
-  "count_outdated" : 35,
-  "uniques_outdated" : 5,
-  "count" : 36,
-  "uniques" : 6,
+  "timestamp" : "2025-10-10T01:17:31Z",
+  "count_outdated" : 36,
+  "uniques_outdated" : 6,
+  "count" : 37,
+  "uniques" : 7,
   "views" : [
     {
-      "timestamp": "2025-09-16T00:00:00Z",
+      "timestamp": "2025-10-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
